--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,14 @@
         <title>Ollimus News</title>
     </head>
     <body>
+        
+        <nav class="nlink">
+            <a class="home"> Home</a>
+            <a class="write" href="/write"> Write</a>
+            <form class="logout"  th:action="@{/logout}" method="POST">
+                <input type="submit" value="Logout"></input>
+            </form>
+        </nav>
 
         <h2>Ollimus News</h2>
 
@@ -13,17 +21,6 @@
                 <a th:href="@{/news/{id}(id=${news.id})}" th:text="${news.title}"></a>
             </li>
         </ol>
-
-        <h2>Add new content</h2>
-
-        <form method="POST" th:action="@{/news}" enctype="multipart/form-data">
-            <a>News Image</a>
-            <input type="file" name="file" id="file"/><br/>
-            <a>Title</a>
-            <input type="text" name="title" id="title"/><br/>
-            <a>Content</a><br/>
-            <textarea rows="4" cols="50" name="content" id="content"></textarea><br/>
-            <input type="submit" value="Post"/>
-        </form>
+        
     </body>
 </html>
