--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/security/tags">
     <head lang="en">
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="tyylit.css"/>
         <title>Ollimus News</title>
     </head>
     <body>
-        
+
         <nav class="nlink">
             <a class="home"> Home</a>
             <a class="write" href="/write"> Write</a>
-            <form class="logout"  th:action="@{/logout}" method="POST">
-                <input type="submit" value="Logout"></input>
+            <form class="logout"  th:action="@{/logout}" method="POST" sec:authorize="hasAuthority('USER')">
+                  <input type="submit" value="Logout"></input>
             </form>
         </nav>
 
@@ -21,6 +22,6 @@
                 <a th:href="@{/news/{id}(id=${news.id})}" th:text="${news.title}"></a>
             </li>
         </ol>
-        
+
     </body>
 </html>
