--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/security/tags">
     <head lang="en">
         <meta charset="UTF-8" />
         <title>Ollimus News</title>
+        <link rel="stylesheet" href="tyylit.css"/>
     </head>
     <body>
         
         <nav class="nlink">
             <a class="home" href="/news"> Home</a>
             <a class="write"> Write</a>
-            <form class="logout" th:action="@{/logout}" method="POST">
-                <input type="submit" value="Logout"></input>
+            <form class="logout"  th:action="@{/logout}" method="POST" sec:authorize="hasAuthority('USER')">
+                  <input type="submit" value="Logout"></input>
             </form>
         </nav>
         
         <h2>Write new article</h2>
 
+        <p>PNG, JPEG or GIF files</p>
+        
         <form method="POST" th:action="@{/news}" enctype="multipart/form-data">
             <a>News Image</a>
             <input type="file" name="file" id="file"/><br/>
