--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -10,16 +10,16 @@
 
         <nav class="nlink">
             <a class="navl" href="/news"> Home</a>
-            <a sec:authorize="hasAuthority('USER')" class="navl" href="/write"> Write</a>
+            <a sec:authorize="hasAuthority('USER')" class="navl" href="/write" name="write"> Write</a>
             <form class="log"  th:action="@{/logout}" method="POST" sec:authorize="hasAuthority('USER')">
                 <input type="submit" value="Logout"></input>
             </form>
             <form class="log"  th:action="@{/login}" method="POST" sec:authorize="isAnonymous()">
                 <a>User:</a>
-                <input type="text" name="username"/>
+                <input type="text" name="username" id="username"/>
                 <a style="margin-left: 8px">Password:</a>
-                <input type="password" name="password"/>
-                <input name="submit" type="submit" value="Login"></input>
+                <input type="password" name="password" id="password"/>
+                <input name="submit" type="submit" value="Login" id="login"></input>
             </form>
         </nav>
 
@@ -29,7 +29,7 @@
         <a style="font-weight: bold">Hits: <a style="font-weight: normal" th:text="${hits}"></a></a><br/>
         
         <form class="remove"  th:action="@{/news/{id}/remove(id=${news.id})}" method="POST" sec:authorize="hasAuthority('ADMIN')">
-            <input type="submit" value="Remove"></input>
+            <input type="submit" value="Remove" name="remove"></input>
         </form>
 
         <br/>
